# payout

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  go.mod  go.sum
api/cmd/: main.go
api/internal/data/: payout.go
api/internal/handler/: payout.go
api/internal/models/: payout.go
config/: .yml.example
config/db/duckdb/: balances_payout.duckdb
config/db/queries/: init.sql
config/support_files/csv/: clients.csv  initial_balances.csv  nacional_holidays.csv
config/support_files/parquet/: daily_payout.parquet
config/support_files/yml/: bcb_fixings.yml  postgresql.yml  redis.yml
data_engine/: main.py
data_engine/endpoints/: fixings.py
data_engine/scripts/: mock_balances.py  mock_clients.py
data_engine/services/: data_manager.py
data_engine/tables/: dates.py
data_engine/utils/: api.py  cache.py  cl_and_form.py  database.py  db_config.py  financial.py  queries.py
