[project]
name = "daily-payout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "connectorx>=0.4.5",
    "duckdb>=1.5.0",
    "fastexcel>=0.19.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "pprintpp>=0.4.0",
    "pyarrow>=23.0.1",
    "pyyaml>=6.0.3",
    "redis>=7.3.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "faker>=40.8.0",
]
